--- a/KidKinder/Views/AdminLayout/partialNavbarProfileHeader.cshtml
+++ b/KidKinder/Views/AdminLayout/partialNavbarProfileHeader.cshtml
@@ -7,21 +7,7 @@
     </a>
     <ul class="show-notification profile-notification">
         <li class="waves-effect waves-light">
-            <a href="#!">
-                <i class="ti-settings"></i> Ayarlar
-            </a>
-        </li>
-        <li class="waves-effect waves-light">
-            <a href="user-profile.html">
-                <i class="ti-user"></i> Profilim
-            </a>
-        </li>
-        <li class="waves-effect waves-light">
-            <a href="/Message/InBox/">
-                <i class="ti-email"></i> Mesajlarım         </a>
-        </li>
-        <li class="waves-effect waves-light">
-            <a href="auth-normal-sign-in.html">
+            <a href="/Login/LogOut/">
                 <i class="ti-layout-sidebar-left"></i> Çıkış Yap
             </a>
         </li>
