--- a/KidKinder/Views/Dashboard/Index.cshtml
+++ b/KidKinder/Views/Dashboard/Index.cshtml
@@ -100,7 +100,7 @@
                                         </div>
                                         <div class="col-8 p-l-0">
                                             <h5>@ViewBag.soCheap TL</h5>
-                                            <p class="text-muted m-b-0">En Uygun Fiyat</p>
+                                            <p class="text-muted m-b-0">En Uygun Kur Fiyat</p>
                                         </div>
                                     </div>
                                 </div>
@@ -110,8 +110,8 @@
                                             <i class="fas fa-clock text-c-green f-24"></i>
                                         </div>
                                         <div class="col-8 p-l-0">
-                                            <h5>@ViewBag.mostSeat</h5>
-                                            <p class="text-muted m-b-0">En Uzun Kur</p>
+                                            <h5>@ViewBag.AvgPrice</h5>
+                                            <p class="text-muted m-b-0">Ortalama Kur Fiyati</p>
                                         </div>
                                     </div>
                                 </div>
@@ -152,7 +152,7 @@
                                 </div>
                                 <div class="col-9 cst-cont">
                                     <h5>Ömer Yeşilbağ</h5>
-                                    <p class="m-b-0">Yıldız Öğrencimiz</p>
+                                    <p class="m-b-0">En Başarılı Öğrencimiz</p>
                                 </div>
                             </div>
                         </div>
@@ -165,7 +165,7 @@
                                 </div>
                                 <div class="col-9 cst-cont">
                                     <h5>Mesut Yılmaz</h5>
-                                    <p class="m-b-0">En Çok Yıldız Alan</p>
+                                    <p class="m-b-0">En Çok Yıldız Alan Öğrencimiz</p>
                                 </div>
                             </div>
                         </div>
@@ -178,7 +178,7 @@
                 <div class="col-xl-6 col-md-12">
                     <div class="card table-card">
                         <div class="card-header">
-                            <h5>Okulumuzun Emektarları</h5>
+                            <h5>Okulumuzun Değerleri</h5>
                             <div class="card-header-right">
                                 <ul class="list-unstyled card-option">
                                     <li><i class="fa fa fa-wrench open-card-option"></i></li>
@@ -201,7 +201,7 @@
                                                         <img src="@item.ImageUrl" alt="user image" class="img-radius img-40 align-top m-r-15">
                                                         <div class="d-inline-block">
                                                             <h6>@item.NameSurname</h6>
-                                                            <p class="text-muted m-b-0">@item.Title</p>
+                                                            <p class="text-muted m-b-0"></p>
                                                         </div>
                                                     </div>
                                                 </td>
