--- a/KidKinder/Views/Teacher/TeacherList.cshtml
+++ b/KidKinder/Views/Teacher/TeacherList.cshtml
@@ -43,7 +43,7 @@
                                         <tr>
                                             <td>@item.TeacherId</td>
                                             <td>@item.NameSurname</td>
-                                            <td>@item.Title</td>
+                                            <td>@item.Branch.BranchName</td>
 
                                             <td><a href="/Teacher/BringTeacher/@item.TeacherId" class="btn btn-outline-dark"><i class="fa fa-edit"></i>Güncelle</a></td>
                                             <td><a href="/Teacher/DeleteTeacher/@item.TeacherId" class="btn btn-outline-danger"><i class="fa fa-times-circle"></i>Sil</a></td>
