--- a/KidKinder/Views/AdminLayout/partialSideBar.cshtml
+++ b/KidKinder/Views/AdminLayout/partialSideBar.cshtml
@@ -52,6 +52,20 @@
                     <span class="pcoded-mcaret"></span>
                 </a>
             </li>
+            <li class="">
+                <a href="/Gallery/Home/" class="waves-effect waves-dark">
+                    <span class="pcoded-micon"><i class="ti-image"></i><b>D</b></span>
+                    <span class="pcoded-mtext">Galeri</span>
+                    <span class="pcoded-mcaret"></span>
+                </a>
+            </li>
+            <li class="">
+                <a href="/GoogleChart/Index/" class="waves-effect waves-dark">
+                    <span class="pcoded-micon"><i class="ti-google"></i><b>D</b></span>
+                    <span class="pcoded-mtext">Google Chart</span>
+                    <span class="pcoded-mcaret"></span>
+                </a>
+            </li>
             @*<li class="">
             <a href="index.html" class="waves-effect waves-dark">
                 <span class="pcoded-micon"><i class="ti-email"></i><b>D</b></span>
