--- a/KidKinder/Views/Contact/Index.cshtml
+++ b/KidKinder/Views/Contact/Index.cshtml
@@ -11,7 +11,7 @@
     @Html.Action("partialNavbar", "Default")
     <!-- Navbar End -->
     <!-- Header Start -->
-    @Html.Action("partialContactHeader","Contact")
+    @Html.Action("partialContactHeader", "Contact")
     <!-- Header End -->
     <!-- Contact Start -->
     <div class="container-fluid pt-5">
@@ -23,16 +23,51 @@
                 <h1 class="mb-4">Bize Soru Sorabilirsin</h1>
             </div>
             <div class="row">
-                @Html.Action("partialSupport","Contact")
-                @Html.Action("partialContactAdress","Contact")
+                @Html.Action("partialSupport", "Contact")
+                @Html.Action("partialContactAdress", "Contact")
             </div>
         </div>
     </div>
-    <!-- Contact End -->
-    <!-- Footer Start -->
-    @Html.Action("partialFooter", "Default")
-    <!-- Footer End -->
-    <!-- Back to Top -->
-    @Html.Action("partialScripts", "Default")
+
+    <head>
+
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="/Template/StayishMap/assets/favicon.ico" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+        <!-- Simple line icons-->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css" rel="stylesheet" />
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+
+        <link href="/Template/StayishMap/css/styles.css" rel="stylesheet" />
+        <link href="~/Template/KidKinder/css/style.min.css" rel="stylesheet" />
+        <link href="~/Template/KidKinder/css/style.css" rel="stylesheet" />
+
+    </head>
+    <body id="page-top">
+
+        <!-- Map-->
+        <div class="map" id="contact">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d42842.68428877413!2d37.324207309308605!3d37.050296293101844!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1531e17551d7b2e3%3A0xae85f58395ad26eb!2sAnneler%20Park%C4%B1!5e0!3m2!1str!2str!4v1709127424563!5m2!1str!2str" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <br />
+            <small><a href="https://www.google.com/maps/place/Anneler+Park%C4%B1/37.0748818,37.3367092,17z/data=!3m1!4b1!4m6!3m5!1s0x1531e17551d7b2e3:0xae85f58395ad26eb!8m2!3d37.0748775!4d37.3392895!16s%2Fg%2F11cky6_nq5?entry=ttu"></a></small>
+        </div>
+        <!-- Scroll to Top Button-->
+        <a class="scroll-to-top rounded" href="#page-top"><i class="fas fa-angle-up"></i></a>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="/Template/StayishMap/js/scripts.js"></script>
+    </body>
+</html>
+
+<!-- Contact End -->
+<!-- Footer Start -->
+@Html.Action("partialFooter", "Default")
+<!-- Footer End -->
+<!-- Back to Top -->
+@Html.Action("partialScripts", "Default")
 </body>
 </html>
