--- a/KidKinder/Views/Contact/partialSupport.cshtml
+++ b/KidKinder/Views/Contact/partialSupport.cshtml
@@ -37,8 +37,8 @@
                            data-validation-required-message="Lütfen Bu Alanı Doldurunuz" />
                     <p class="help-block text-danger"></p>
                 </div>
-                <input type="date" id="start" name="SendDate" value=@DateTime.Now required/>
-
+                <input type="text" id="myDate" name="SendDate"  class="form-control"  readonly/>
+                <br />
                 <div class="control-group">
                     <textarea class="form-control"
                               rows="6"
@@ -62,3 +62,17 @@
     </div>
 </div>
 
+<script>
+    // Bugünün tarihini al
+    var today = new Date();
+
+    // Tarihi dd.MM.yyyy formatına dönüştür
+    var dd = String(today.getDate()).padStart(2, '0');
+    var mm = String(today.getMonth() + 1).padStart(2, '0'); // Ocak 0'dan başlar
+    var yyyy = today.getFullYear();
+
+    today = dd + '.' + mm + '.' + yyyy;
+
+    // İlgili input elementini bul ve bugünün tarihini varsayılan olarak ayarla
+    document.getElementById("myDate").value = today;
+</script>
