--- a/KidKinder/Views/Teacher/BringTeacher.cshtml
+++ b/KidKinder/Views/Teacher/BringTeacher.cshtml
@@ -34,7 +34,7 @@
                                     <div class="form-group row">
                                         <label class="col-sm-2 col-form-label">Yaş Aralığı :</label>
                                         <div class="col-sm-10">
-                                            @Html.TextBoxFor(x => x.Title, new { @class = "form-control form-control-round", @required = "required" })
+                                            @Html.DropDownListFor(x => x.BranchID, (List<SelectListItem>)ViewBag.v, new { @class = "form-control form-control-round" })
                                         </div>
                                     </div>
                                     <div class="form-group row">
