--- a/KidKinder/Views/Teacher/CreateTeacher.cshtml
+++ b/KidKinder/Views/Teacher/CreateTeacher.cshtml
@@ -28,7 +28,7 @@
                                 <div class="form-group row">
                                     <label class="col-sm-2 col-form-label">Öğretmen Branş :</label>
                                     <div class="col-sm-10">
-                                        <input type="text" class="form-control form-control-round" name="Title" required>
+                                        @Html.DropDownListFor(x=>x.BranchID,(List<SelectListItem>)ViewBag.v , new { @class= "form-control form-control-round" })
                                     </div>
                                 </div>
                                 <div class="form-group row">
