--- a/KidKinder/Views/AdminLayout/partialSideBar.cshtml
+++ b/KidKinder/Views/AdminLayout/partialSideBar.cshtml
@@ -66,6 +66,13 @@
                     <span class="pcoded-mcaret"></span>
                 </a>
             </li>
+            <li class="">
+                <a href="/Testimonial/Index/" class="waves-effect waves-dark">
+                    <span class="pcoded-micon"><i class="ti-comment"></i><b>D</b></span>
+                    <span class="pcoded-mtext">Yorumlar</span>
+                    <span class="pcoded-mcaret"></span>
+                </a>
+            </li>
             @*<li class="">
             <a href="index.html" class="waves-effect waves-dark">
                 <span class="pcoded-micon"><i class="ti-email"></i><b>D</b></span>
