--- a/KidKinder/Views/AdminLayout/partialNavbarProfileHeader.cshtml
+++ b/KidKinder/Views/AdminLayout/partialNavbarProfileHeader.cshtml
@@ -7,6 +7,11 @@
     </a>
     <ul class="show-notification profile-notification">
         <li class="waves-effect waves-light">
+            <a href="/Admin/Index/">
+                <i class="ti-layout-sidebar-left"></i> Profilim
+            </a>
+        </li>
+        <li class="waves-effect waves-light">
             <a href="/Login/LogOut/">
                 <i class="ti-layout-sidebar-left"></i> Çıkış Yap
             </a>
