NotFound href Added

--- a/KidKinder/Views/Shared/_Layout.cshtml
+++ b/KidKinder/Views/Shared/_Layout.cshtml
@@ -46,9 +46,9 @@
                 <div class="notfound-404">
                     <h1>Oops!</h1>
                 </div>
-                <h2>404 - Page not found</h2>
-                <p>The page you are looking for might have been removed had its name changed or is temporarily unavailable.</p>
-                <a href="#">Go To Homepage</a>
+                <h2>404 -Sayfa Yok</h2>
+                <p>Sanırım Kayıp Oldunuz. Böyle Bir Sayfa Bulunamadı.</p>
+                <a href="/Default/Index/">Ana Sayfaya Dön</a>
             </div>
         </div>
 
